[gd_scene load_steps=7 format=3 uid="uid://d3rx5np0ljjgp"]

[ext_resource type="Script" path="res://HUD.gd" id="1_yvlug"]
[ext_resource type="FontFile" uid="uid://csrymoqebal1q" path="res://fonts/Xolonium-Regular.ttf" id="2_lehfn"]
[ext_resource type="Texture2D" uid="uid://bqexxhfy3mggi" path="res://art/us_flag.png" id="3_nvihj"]
[ext_resource type="Texture2D" uid="uid://c60d16cyxxdv" path="res://art/br_flag.png" id="4_o45u1"]

[sub_resource type="InputEventAction" id="InputEventAction_xlya7"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_gqc2l"]
events = [SubResource("InputEventAction_xlya7")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_yvlug")

[node name="ScoreLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -22.5
offset_right = 22.5
offset_bottom = 81.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_lehfn")
theme_override_font_sizes/font_size = 64
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -121.5
offset_right = 240.0
offset_bottom = 121.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_lehfn")
theme_override_font_sizes/font_size = 64
text = "Dodge The 
Creepers!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -88.5
offset_top = -148.0
offset_right = 111.5
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_lehfn")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_gqc2l")
text = "Start"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Easy" type="Button" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 2.08165e-12)
offset_left = 8.0
offset_top = 130.0
offset_right = 98.0
offset_bottom = 177.0
theme_override_fonts/font = ExtResource("2_lehfn")
theme_override_font_sizes/font_size = 32
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
text = "Easy"
flat = true

[node name="Normal" type="Button" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.0
offset_top = 130.0
offset_right = 62.0
offset_bottom = 177.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_lehfn")
theme_override_font_sizes/font_size = 32
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
text = "Normal
"
flat = true

[node name="Hard" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -95.0
offset_top = 130.0
offset_right = -7.0
offset_bottom = 177.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("2_lehfn")
theme_override_font_sizes/font_size = 32
toggle_mode = true
action_mode = 0
keep_pressed_outside = true
text = "Hard"
flat = true

[node name="SelectedLevel" type="Label" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_lehfn")
theme_override_font_sizes/font_size = 12
text = "Easy"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="LangUS" type="Button" parent="."]
offset_left = 8.0
offset_top = 486.0
offset_right = 155.0
offset_bottom = 550.0
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("2_lehfn")
text = "English"
icon = ExtResource("3_nvihj")
expand_icon = true

[node name="LangBR" type="Button" parent="."]
clip_contents = true
offset_left = 325.0
offset_top = 486.0
offset_right = 472.0
offset_bottom = 550.0
auto_translate = false
localize_numeral_system = false
theme_override_fonts/font = ExtResource("2_lehfn")
text = "PortuguÃªs"
icon = ExtResource("4_o45u1")
expand_icon = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
[connection signal="pressed" from="Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="Hard" to="." method="_on_hard_pressed"]
[connection signal="pressed" from="LangUS" to="." method="_on_lang_us_pressed"]
[connection signal="pressed" from="LangBR" to="." method="_on_lang_br_pressed"]
